--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,10 @@
     <% if current_user %>
       Signed in as <strong><%= @auth["info"] %></strong>!
       <%= current_user.first_name %>
-      <!-- <%= link_to "Sign out", signout_path, id: "sign_out" %>
+      <%= link_to "Sign out", signout_path, id: "sign_out" %>
     <% else %>
       <%= link_to "Sign in with Google", "/auth/google_oauth2", id: "sign_in" %>
-    <% end %> -->
+    <% end %>
   </div>
   <div>
 <%= yield %>
