--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,12 +9,13 @@
 <body>
   <div>
     <% if current_user %>
-      Signed in as <strong><%= @auth["info"] %></strong>!
-      <%= current_user.first_name %>
-      <!-- <%= link_to "Sign out", signout_path, id: "sign_out" %>
+      Signed in as <%= current_user.first_name %>
+      <%= link_to "Sign out", signout_path, id: "sign_out" %>
+      User information as follows:
+        <strong><%= session[:auth]["info"] %></strong>
     <% else %>
       <%= link_to "Sign in with Google", "/auth/google_oauth2", id: "sign_in" %>
-    <% end %> -->
+    <% end %>
   </div>
   <div>
 <%= yield %>
