--- a/app/assets/stylesheets/images.scss
+++ b/app/assets/stylesheets/images.scss
@@ -1,3 +1,26 @@
 // Place all the styles related to the images controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.dropHeader {
+  text-align: center;
+}
+.dropzone {
+  background-color: #F7F7F7;
+  font-size: 20px;
+  text-align: center;
+  width: 70%;
+  height: 400px;
+  margin: 70px 15%;
+  cursor: pointer;
+  display:inline-block;
+}
+
+.dz-default.dz-message {
+  padding: 80px;
+  position:relative;
+}
+.index {
+  text-align: center;
+  position: relative;
+  bottom: 224px;
+}
