--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,4 +1,4 @@
-<h1>My Images</h1>
+<h1 class="dropHeader">Receive files like a Boss</h1>
 
 <%= form_for(Image.new, html: { multipart: true, class: "dropzone"}) do |f|  %>
   <div class="fallback">
