--- a/app/assets/stylesheets/uploads.scss
+++ b/app/assets/stylesheets/uploads.scss
@@ -1,4 +1,4 @@
-// Place all the styles related to the images controller here.
+// Place all the styles related to the uploads controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .dropHeader {
