--- a/app/views/uploads/index.html.erb
+++ b/app/views/uploads/index.html.erb
@@ -1,6 +1,6 @@
 <h1 class="dropHeader">Receive files like a Boss</h1>
 
-<%= form_for(Image.new, html: { multipart: true, class: "dropzone"}) do |f|  %>
+<%= form_for(Upload.new, html: { multipart: true, class: "dropzone"}) do |f|  %>
   <div class="fallback">
     <%= f.file_field :avatar %><br>
     <%= f.submit "Upload my Avatar" %>
